--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -12,14 +12,14 @@
             <ion-slide>
                 <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align：middle;"></i>
+                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align:middle;"></i>
                      </a>
                  </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align：middle;"></i>
+                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align:middle;"></i>
                      </a>
                  </div>
             </ion-slide>
@@ -30,12 +30,12 @@
                 <div class="spacer"style="height:10px;"></div>
                 <label class="item item-input">
                     <i class="icon ion-ios-telephone-outline placeholder-icon"></i>
-                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.userName" required>
+                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" required>
                 </label>
 
                 <label class="item item-input item-button-right" ng-show="showVefiry">
                     <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
-                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.password" required>
+                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.psd" required>
                     <button class="button button-positive">
                         获取验证码
                     </button>
