--- a/udqAutoApp/platforms/android/assets/www/app/login/login.html
+++ b/udqAutoApp/platforms/android/assets/www/app/login/login.html
@@ -35,7 +35,7 @@
 
                 <label class="item item-input item-button-right" ng-show="showVefiry">
                     <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
-                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.psd" required>
+                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.psd">
                     <button class="button button-positive">
                         获取验证码
                     </button>
