--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -8,7 +8,7 @@
     <ion-content>
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <ion-list class="list card" ng-repeat="order in orderList">
-            <ion-item >
+            <ion-item ng-click="goToSeeOrder(order)">
                 <div>
                     <h2>车牌号：{{order.pn}}</h2>
                     <p>时间：{{order.date}} &nbsp&nbsp&nbsp金额：{{order.finalAmount}}</p>
@@ -25,7 +25,7 @@
                     <ion-option-button class="button-info" ng-show="order.state==2" ng-click="scanOrder(order)">
                         <i class="icon ion-navicon"></i>
                     </ion-option-button>
-                    <ion-option-button class="button-info" ng-show='order.state==4' ng-click="judgeOrder(order);openPopover($event);">
+                    <ion-option-button class="button-info" ng-show='order.state==4' ng-click="judgeOrder(order)">
                         <i class="icon ion-ribbon-b"></i>
                     </ion-option-button>
                     <ion-option-button class="button-info" ng-show='order.state==3' ng-click="shareOrder(order)">
@@ -40,17 +40,18 @@
 </ion-view>
 <!--订单展示-->
 <script id="orderShow.html" type="text/ng-template">
-    <ion-popover-view>
+    <ion-popover-view style="width:250px;">
         <ion-header-bar>
-            <h1 class="title">订单</h1>
+            <p>订单号$nbsp{{selectOrder.orderNo}}</p>
         </ion-header-bar>
 
         <ion-content>
-            <h2>订单号：{{selectOrder.orderNo}}</h2>
+            
             <span class="badge badge-assertive">{{order.state}}</span>
             <p>车牌号：{{selectOrder.pn}}</p>
             <p>清洗工编号：{{selectOrder.washerId}}</p>
-            <p>预约时间：{{selectOrder.orderTime}}，结束时间：{{selectOrder.finishTime}}</p>
+            <p>预约时间：{{selectOrder.orderTime}}</p>
+            <p>结束时间：{{selectOrder.finishTime}}</p>
             <p>金额：{{selectOrder.finalAmount}}</p>
             <p>洗车备注：{{selectOrder.userNote}}</p>
             <p>评分：{{selectOrder.gradeUser}}</p>
@@ -60,17 +61,20 @@
 </script>
 <!--订单评价-->
 <script id="orderJudge.html" type="text/ng-template">
-    <ion-popover-view>
+    <ion-popover-view style="width:250px;">
         <ion-header-bar>
-            <h1 class="title">评价</h1>
+            <div style="align-content:center;">
+                <p>订单号{{selectOrder.orderNo}}</p>
+            </div>
+            
         </ion-header-bar>
         <ion-content>
             <div>
-                <h2>订单号：{{selectOrder.orderNo}}</h2>
                 <span class="badge badge-assertive">{{order.state}}</span>
                 <p>车牌号：{{selectOrder.pn}}</p>
                 <p>清洗工编号：{{selectOrder.washerId}}</p>
-                <p>预约时间：{{selectOrder.orderTime}}，结束时间：{{selectOrder.finishTime}}</p>
+                <p>预约时间：{{selectOrder.orderTime}}</p>
+                <p>结束时间：{{selectOrder.finishTime}}</p>
                 <p>金额：{{selectOrder.finalAmount}}</p>
                 <p>洗车备注：{{selectOrder.userNote}}</p>
                 <p>评分：{{selectOrder.gradeUser}}</p>
