--- a/udqAutoApp/www/app/customer/order/regionSelect.html
+++ b/udqAutoApp/www/app/customer/order/regionSelect.html
@@ -1,19 +1,18 @@
 ﻿<ion-view view-title="选择小区">
     <ion-nav-bar class="bar-stable" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackOfRegionSelect()"></button>
 
         </ion-nav-buttons>
 
     </ion-nav-bar>
     <ion-content has-subheader="false">
+        <ion-refresher on-refresh="doRefreshOfRegion()"></ion-refresher>
         <div class="list" ng-repeat="district in districts">
-            <label class="item item-radio">
-                <input type="radio" name="group">
-                <a class="item item-icon-left ">
-                    <i class="icon ion-android-people"></i>
+            <label class="item item-checkbox">
+                <input type="checkbox" name="group" ng-checked="district.check==1" ng-true-value="1" ng-false-value="0" ng-model="district.select">
+                <a class="item">
                     <h2>小区名称：{{district.name}}</h2>
-
                 </a>
                 <i class="radio-icon ion-checkmark"></i>
 
