--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -6,33 +6,33 @@
     </ion-nav-bar>
 
     <ion-content padding="true" class="has-header">
-        <form>
-            <ion-list>
-                <label class="item item-input">
-                    <i class="icon ion-ios-telephone placeholder-icon"></i>
-                    <input type="tel" placeholder="请输入手机号码" ng-model="userInfo.phoneNumber" required>
-                </label>
-                <label class="item item-input item-button-right">
-                    <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
-                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.password" required>
-                    <button class="button button-positive">
-                        获取验证码
-                    </button>
-                </label>
-                <div class="spacer" style="height:30px;"></div>
-                <label class="item item-input">
-                    <i class="icon ion-ios-person placeholder-icon"></i>
-                    <input type="text" name="name" ng-model="userInfo.userName" placeholder="请输入称呼" required>
-                </label>
 
-                <ion-item >
-                    <input type="radio" name="sex" />男士&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    <input type="radio" name="sex" />女士
-                </ion-item>
-                
+        <ion-list>
+            <label class="item item-input">
+                <i class="icon ion-ios-telephone placeholder-icon"></i>
+                <input type="tel" placeholder="请输入手机号码" ng-model="userInfo.phoneNumber" required>
+            </label>
+            <label class="item item-input item-button-right">
+                <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
+                <input type="password" name="password" placeholder="请输入手机验证码" ng-model="userInfo.password" >
+                <button class="button button-stable">
+                    获取验证码
+                </button>
+            </label>
+            <div class="spacer" style="height:30px;"></div>
+            <label class="item item-input">
+                <i class="icon ion-ios-person placeholder-icon"></i>
+                <input type="text" name="name" ng-model="userInfo.userName" placeholder="请输入称呼" >
+            </label>
 
-            </ion-list>
-            <button class="button button-stable button-block " ng-click="register()">注册</button>
-        </form>
+            <ion-item>
+                <input type="radio" name="sex" checked ng-model="userInfo.sex" value='1'/>男士&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                <input type="radio" name="sex" ng-model="userInfo.sex" value='2' />女士
+            </ion-item>
+
+
+        </ion-list>
+        <button class="button button-stable button-block " ng-click="register()">注册</button>
+
     </ion-content>
 </ion-view>
