--- a/udqAutoApp/platforms/android/assets/www/index.html
+++ b/udqAutoApp/platforms/android/assets/www/index.html
@@ -38,6 +38,12 @@
     <script src="app/login/loginSvr.js"></script>
     <script src="app/employee/home/home.js"></script>
     <script src="app/employee/order/orderToBeConfirmedCtrl.js"></script>
+    <script src="app/employee/order/acceptedOrderCtrl.js"></script>
+    <script src="app/employee/order/newOrderCtrl.js"></script>
+    <script src="app/employee/order/finishedOrderCtrl.js"></script>
+    <script src="app/employee/order/orderListCtrl.js"></script>
+    <script src="app/employee/order/orderInfoCtrl.js"></script>
+    <script src="app/employee/order/orderSvr.js"></script>
     <script src="app/util/appConfig.js"></script>
     <script src="app/common/regionSvr.js"></script>
 
