--- a/udqAutoApp/platforms/android/assets/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/member/memberInfoEdit.html
@@ -12,7 +12,7 @@
                 <!--输入称呼和性别-->
                 <label class="item item-input">
                     <i class="icon ion-ios-person placeholder-icon"></i>
-                    <input type="text" name="name" ng-model='name' placeholder="请输入您的称呼" required>
+                    <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" required>
                 </label>
 
             </ion-list>
