--- a/udqAutoApp/platforms/android/assets/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/order/orderMake.html
@@ -22,35 +22,32 @@
             </a>
 
             <!-- 车辆信息、预约时间、详细地址（可选） -->
-            <div class="spacer" style="height:10px;"></div>
 
             <a class="item item-icon-right" ng-click="goToAutoList()">
                 选择车辆
                 <i class="icon ion-chevron-right"></i>
                 <div class="item-content">
-                    <ul ng-repeat="auto in autoInfo" ng-show="auto.id ==selectedAutoId">
+                    <ul ng-repeat="auto in autoInfo" ng-show="selectedAuto.selectedAutoId ==auto.id">
                         <li>
-                            车牌号:{{auto.pn}}
+                            选择车辆:{{auto.pn}}
                         </li>
                     </ul>
                 </div>
             </a>
-
-            <div class="spacer" style="height:10px;"></div>
             <a class="item item-icon-right" ng-click="goToRegionSelect()">
                 选择小区
                 <i class="icon ion-chevron-right"></i>
+
                 <div class="item-content">
-                    <ul ng-repeat="dis in districts" ng-show="dis.id ==selectedRegionId">
+                    <ul ng-repeat="dis in districts" ng-show="dis.id ==selectedAuto.selectedRegionId">
                         <li>
-                            默认小区:{{dis.name}}
+                            选择小区:{{dis.name}}
                         </li>
                     </ul>
                 </div>
             </a>
-            <div class="spacer" style="height:10px;"></div>
 
-            <textarea rows="3" placeholder="备注：" cols="50" ng-model="order.userNote"></textarea>
+            <textarea rows="3" placeholder="您还有什么要求呢？" cols="50" ng-model="order.userNote"></textarea>
 
 
 
