--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -23,11 +23,7 @@
                 设置
             </a>
 
-            <a class="item item-icon-left" ng-click="popover.show($event)">
-                <i class="icon ion-ios-telephone-outline"></i>
-                客服：400-8484-842
-            </a>
-            <button class="button button-block button-positive ">退出账号</button>
+            <button class="button button-block button-positive " ng-click="exitCurrentUser()">退出账号</button>
         </div>
     </ion-content>
 
