--- a/udqAutoApp/www/app/employee/order/orderInfo.html
+++ b/udqAutoApp/www/app/employee/order/orderInfo.html
@@ -14,7 +14,7 @@
                 <td>客户姓名：{{order.customerName}}</td><td>联系电话：{{order.customerMobile}}</td>
             </tr>
             <tr>
-                <td>洗车类型：{{order.washerTypeName}}</td><td>客户评价：{{order.customerGrade}}</td>
+                <td>洗车类型：{{order.washTypeName}}</td><td>客户评价：{{order.customerGrade}}</td>
             </tr>
             <tr>
                 <td>车牌号码：{{order.autoPN}}</td><td>所属小区：{{order.regionName}}</td>
