--- a/udqAutoApp/www/app/employee/order/orderList.html
+++ b/udqAutoApp/www/app/employee/order/orderList.html
@@ -1,6 +1,8 @@
-﻿<ion-view title="订单信息">
-    <ion-nav-bar class="bar-stable" align-title="center">
-    </ion-nav-bar>
+﻿<ion-view view-title="洗车店">
+    <!-- header -->
+    <div>
+        <ion-nav-bar class="bar-stable"></ion-nav-bar>
+    </div>
     <!--订单展示-->
     <ion-tabs class="tabs-top">
         <ion-tab title="新订单" href="#/employeeOrderList/newOrder">
@@ -14,6 +16,5 @@
         <ion-tab title="已完成" href="#/employeeOrderList/finishedOrder">
             <ion-nav-view name="finishedOrder-tab"></ion-nav-view>
         </ion-tab>
-
     </ion-tabs>
 </ion-view>
