--- a/udqAutoApp/platforms/android/assets/www/app/customer/home/home.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/home/home.html
@@ -4,7 +4,7 @@
         <ion-nav-bar class="bar-stable"></ion-nav-bar>
     </div>
 
-    <ion-content padding="true" scroll="false" class="has-header">
+    <ion-content padding="true" class="has-header">
         <!-- 图片轮播 -->
         <ion-slide-box>
             <ion-slide>
