--- a/udqAutoApp/www/app/employee/order/acceptedOrder.html
+++ b/udqAutoApp/www/app/employee/order/acceptedOrder.html
@@ -1,10 +1,13 @@
 ﻿<ion-view>
     <ion-content padding="true" class="has-header">
+        <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <ion-list>
             <ion-item ng-repeat="order in orderInfo" ng-click="goToOrderInfo(order)">
                 <p>车牌: {{order.autoPN}}</p>
                 <p>时间：{{order.orderTime}}，金额：{{order.finalAmount}}</p>
 
+                <ion-option-button class="button button-icon icon ion-camera" ng-click="">
+                </ion-option-button>
                 <ion-option-button class="button-positive" ng-click="finishOrder(order)">
                     确认完成
                 </ion-option-button>
