--- a/udqAutoApp/www/app/employee/order/orderInfo.html
+++ b/udqAutoApp/www/app/employee/order/orderInfo.html
@@ -8,7 +8,7 @@
         <p><h4>订单基本信息</h4></p>
         <table>
             <tr>
-                <td>订单编号：{{order.orderNo}}</td><td>订单状态: {{order.state}}</td>
+                <td>订单编号：{{order.orderNo}}</td><td>订单状态: {{order.stateNote}}</td>
             </tr>
             <tr>
                 <td>客户姓名：{{order.customerName}}</td><td>联系电话：{{order.customerMobile}}</td>
@@ -23,9 +23,6 @@
                 <td>下单时间：{{order.billTime}}</td>
             </tr>
             <tr>
-                <td>预约时间：{{order.orderTime}}</td>
-            </tr>
-            <tr>
                 <td>优惠券：{{order.couponName}}</td><td>优惠金额：{{order.couponAmount}}</td>
             </tr>
             <tr>
@@ -35,20 +32,22 @@
                 <td>订单备注：{{order.userNote}}</td>
             </tr>
         </table>
-        <p><h4>订单处理信息</h4></p>
-        <table>
-            <tr>
-                <td>接单员工：{{order.washerName}}</td>
-            </tr>
-            <tr>
-                <td>接单时间：{{order.acceptTime}}</td>
-            </tr>
-            <tr>
-                <td>开始时间：{{order.beginTime}}</td>
-            </tr>
-            <tr>
-                <td>结束时间：{{order.finishTime}}</td>
-            </tr>
-        </table>
+        <div ng-show="order.state==2||order.state==3||order.state==4||order.state==5">
+            <p><h4>订单处理信息</h4></p>
+            <table>
+                <tr>
+                    <td>接单员工：{{order.washerName}}</td>
+                </tr>
+                <tr>
+                    <td>接单时间：{{order.acceptTime}}</td>
+                </tr>
+                <tr>
+                    <td>开始时间：{{order.beginTime}}</td>
+                </tr>
+                <tr>
+                    <td>结束时间：{{order.finishTime}}</td>
+                </tr>
+            </table>
+        </div>
     </ion-content>
 </ion-view>
