1、添加白单并且进行相关白单设置

--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -13,7 +13,7 @@
                 <div class="item-content">
                     <ul ng-repeat="type in types" ng-show="type.check ==1">
                         <li>
-                            <h2>服务内容：{{type.name}}&nbsp;&nbsp;价格：￥{{type.amount}}</h2>
+                            <h2>服务内容：{{type.name}}&nbsp;&nbsp;价格：{{type.amount}}元</h2>
                         </li>
                     </ul>
                 </div>
