--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
-    
+    <!-- Enable all requests, inline styles, and eval() -->
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <title>点趣车生活</title>
 
     <!-- udqAutoApp 引用 ionic -->
@@ -53,7 +54,7 @@
 
 
 </head>
-<body ng-app="udqApp">
+<body ng-csp ng-app="udqApp">
     <ion-nav-view></ion-nav-view>
 </body>
 </html>
