照相和上传

--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -52,6 +52,7 @@
     <script src="app/util/appConfig.js"></script>
     <script src="app/common/regionSvr.js"></script>
     <script src="app/util/cameraSvr.js"></script>
+    <script src="app/util/fileTransferSvr.js"></script>
 
 </head>
 <body ng-csp ng-app="udqApp">
