--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -9,7 +9,7 @@
             <ion-list>
                 <label class="item item-input">
                     <i class="icon ion-model-s placeholder-icon"></i>
-                    <input type="text" name="pn" ng-model="autoInfo.pn" ng-pattern="pnRe" placeholder="请输入车牌号" required>
+                    <input type="text" name="pn" ng-model="autoInfo.pn" placeholder="请输入车牌号" required>
                 </label>
                 <div class="spacer" style="height:10px;"></div>
                 <label class="item item-input">
