--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col"><a class="button button-circle">优惠券</a></div>
             <div class="col"><a class="button button-circle" ng-click="goToWashTypeIntroduce()">服务</a></div>
-            <div class="col"><a class="button button-circle" ng-click="goToMyDQ()">我的AA</a></div>
+            <div class="col"><a class="button button-circle" ng-click="goToMyDQ()">我的</a></div>
         </div>
  
     </ion-content>
