--- a/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
+++ b/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
@@ -10,7 +10,7 @@
                 <i class="icon ion-model-s"></i>
                 <h2>{{type.name}}</h2>
                 <p>服务内容：{{type.note}}</p>
-                <span class="badge badge-assertive">{{type.amount}}</span>
+                <span class="badge badge-light">{{type.amount}}元</span>
             </a>
         </div>
     </ion-content>
