--- a/udqAutoApp/www/app/customer/auto/autoMgr.html
+++ b/udqAutoApp/www/app/customer/auto/autoMgr.html
@@ -11,13 +11,16 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
-        <ion-refresher on-refresh ="doRefresh()"></ion-refresher>
+        <ion-refresher on-refresh="doRefresh()"></ion-refresher>
+        <div style="text-align:center;">
+            <h4 ng-show="autoInfo ==undefined">暂无车辆,赶紧来添加吧</h4>
+        </div>
         <ion-list>
             <ion-item ng-repeat="auto in autoInfo">
-                    <h2>车牌号：{{auto.pn}}</h2>
-                    <br />
-                    <p>品牌:{{auto.brand}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 型号：{{auto.model}}</p>
-                    <ion-option-button class="button-info" ng-click="deleteAuto(auto)">
+                <h2>车牌号：{{auto.pn}}</h2>
+                <br />
+                <p>品牌:{{auto.brand}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 型号：{{auto.model}}</p>
+                <ion-option-button class="button-stable" ng-click="deleteAuto(auto)">
                     <i class="icon ion-ios-trash"></i>
             </ion-item>
         </ion-list>
