--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -13,9 +13,9 @@
                     <h2>订单编号：{{order.orderNo}}</h2>
                     <p>车牌号：{{order.autoPN}} &nbsp&nbsp&nbsp金额：{{order.finalAmount}}</p>
                     <span class="badge badge-stable" ng-show="order.state==1">已下单</span>
-                    <span class="badge badge-stable" ng-show="order.state==2||order.state==3||order.state==10||order.state==11">进行中</span>
-                    <span class="badge badge-stable" ng-show="order.state==4">已完成</span>
-                    <span class="badge badge-stable" ng-show="order.state==5">已完成</span>
+                    <span class="badge badge-stable" ng-show="order.state==11||order.state==10">已取消</span>
+                    <span class="badge badge-stable" ng-show="order.state==2||order.state==3">洗车中</span>
+                    <span class="badge badge-stable" ng-show="order.state==4||order.state==5">已完成</span>
                     
                     <!--1:表示客户已经下单
                         2:表示门店接受预约
@@ -23,16 +23,16 @@
                         4:表示洗车完成
                         10:客户取消
                         11:门店取消-->
-                    <ion-option-button class="button-info" ng-show="order.state==1" ng-click="cancelOrder(order)">
+                    <ion-option-button class="button-stable" ng-show="order.state==1" ng-click="cancelOrder(order)">
                         取消
                     </ion-option-button>
-                    <ion-option-button class="button-info" ng-show="order.state==2||order.state==3||order.state==10||order.state==11" ng-click="scanOrder(order)">
+                    <ion-option-button class="button-stable" ng-show="order.state==2||order.state==3||order.state==10||order.state==11" ng-click="scanOrder(order)">
                         查看
                     </ion-option-button>
-                    <ion-option-button class="button-info" ng-show='order.state==4' ng-click="judgeOrder(order)">
+                    <ion-option-button class="button-stable" ng-show='order.state==4' ng-click="judgeOrder(order)">
                         评价
                     </ion-option-button>
-                    <ion-option-button class="button-info" ng-show='order.state==5' ng-click="shareOrder(order)">
+                    <ion-option-button class="button-stable" ng-show='order.state==5' ng-click="shareOrder(order)">
                         分享
                     </ion-option-button>
                 </div>
