--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -33,16 +33,17 @@
                     <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" required>
                 </label>
 
-                <label class="item item-input item-button-right" ng-show="showVefiry">
-                    <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
-                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.psd">
-                    <button class="button button-positive">
-                        获取验证码
+                <div class="item item-input-inset">
+                    <label class="item-input-wrapper">
+                        <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd">
+                    </label>
+                    <button class="button button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                        {{tips}}
                     </button>
-                </label>
+                </div>
             </ion-list>
-            <button class="button button-stable button-block " ng-click="login()">登录</button>
-            <button class="button button-stable button-block " ng-click="register()">注册</button>
+            <button class="button button-stable button-block button-small" ng-click="login()">登录</button>
+            <button class="button button-stable button-block button-small" ng-click="register()">注册</button>
         </form>
     </ion-content>
 
