添加车辆选择区域

--- a/udqAutoApp/www/app/customer/auto/districtSelect.html
+++ b/udqAutoApp/www/app/customer/auto/districtSelect.html
@@ -9,7 +9,7 @@
     <ion-content has-subheader="false">
         <ion-refresher on-refresh="doRefreshOfDistrict()"></ion-refresher>
 
-        <ion-list ng-repeat="district in districts">
+        <ion-list ng-repeat="district in districts" ng-show="district.pid ==selectedDistrictPid">
             <ion-radio ng-model="selected.selectedDistrictId" value={{district.id}}>{{district.name}}</ion-radio>
         </ion-list>
 
