--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -48,6 +48,7 @@
     <script src="app/employee/order/finishedOrderCtrl.js"></script>
     <script src="app/employee/order/orderListCtrl.js"></script>
     <script src="app/employee/order/orderInfoCtrl.js"></script>
+    <script src="app/employee/order/photograph.js"></script>
     <script src="app/employee/order/orderSvr.js"></script>
     <script src="app/util/appConfig.js"></script>
     <script src="app/common/regionSvr.js"></script>
