--- a/udqAutoApp/www/app/customer/auto/regionSelect.html
+++ b/udqAutoApp/www/app/customer/auto/regionSelect.html
@@ -8,7 +8,7 @@
     <ion-content has-subheader="false">
         <ion-refresher on-refresh="doRefreshOfRegion()"></ion-refresher>
 
-        <ion-list ng-repeat="region in regions">
+        <ion-list ng-repeat="region in regions"  ng-show="region.pid ==selectedRegionPid">
             <ion-radio ng-model="selected.selectedRegionId" value={{region.id}}>{{region.name}}</ion-radio>
         </ion-list>
 
