--- a/udqAutoApp/www/app/employee/order/acceptedOrder.html
+++ b/udqAutoApp/www/app/employee/order/acceptedOrder.html
@@ -6,13 +6,8 @@
                 <p>车牌: {{order.autoPN}}</p>
                 <p>时间：{{order.orderTime}}，金额：{{order.finalAmount}}</p>
 
-                <ion-option-button class="button button-icon icon ion-camera" ng-click="">
-                </ion-option-button>
-                <ion-option-button class="button-positive" ng-click="finishOrder(order)">
+                <ion-option-button class="button-positive" ng-click="gotoPhotograph(order)">
                     确认完成
-                </ion-option-button>
-                <ion-option-button class="button-assertive" ng-click="cancelOrder(order)">
-                    取消订单
                 </ion-option-button>
             </ion-item>
         </ion-list>
