--- a/udqAutoApp/www/app/customer/auto/autoList.html
+++ b/udqAutoApp/www/app/customer/auto/autoList.html
@@ -11,6 +11,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
+        <div style="text-align:center;" ng-show="hasNoAuto"><h4>暂无车辆,赶紧来添加吧</h4></div>
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         
         <ion-list ng-repeat="auto in autoInfo" >
