1、支付选择放到一个新的页面； 2、订单； 3、上拉；

--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -2,7 +2,7 @@
 <ion-view title="编辑个人信息">
     <ion-nav-bar>
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
