--- a/udqAutoApp/www/app/employee/order/acceptedOrder.html
+++ b/udqAutoApp/www/app/employee/order/acceptedOrder.html
@@ -6,7 +6,7 @@
                 <p>车牌: {{order.autoPN}}</p>
                 <p>时间：{{order.orderTime}}，金额：{{order.finalAmount}}</p>
 
-                <ion-option-button class="button-positive" ng-click="gotoPhotograph(order)">
+                <ion-option-button class="button-positive" ng-click="finishOrder(order)">
                     确认完成
                 </ion-option-button>
             </ion-item>
