--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -35,6 +35,7 @@
     <script src="app/customer/order/orderSvr.js"></script>
     <script src="app/customer/order/orderMakeCtrl.js"></script>
     <script src="app/customer/order/orderMakeSvr.js"></script>
+    <script src="app/customer/order/orderPay.js"></script>
     <script src="app/customer/washType/washtypeSvr.js"></script>
     <script src="app/customer/register/registerCtrl.js"></script>
     <script src="app/customer/register/registerSvr.js"></script>
