--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -1,7 +1,7 @@
 <ion-view title="添加车辆信息">
     <ion-nav-bar>
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
