--- a/udqAutoApp/www/app/customer/order/regionSelect.html
+++ b/udqAutoApp/www/app/customer/order/regionSelect.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="选择小区">
     <ion-nav-bar class="bar-stable" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackOfRegionSelect()"></button>
+            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackOfRegionSelect()"></button>
 
         </ion-nav-buttons>
 
