--- a/udqAutoApp/www/app/customer/washType/washtypeSelect.html
+++ b/udqAutoApp/www/app/customer/washType/washtypeSelect.html
@@ -1,7 +1,7 @@
 <ion-view view-title="洗车类型">
     <ion-nav-bar class="bar-stable" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackOfWashType()"></button>
+            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackOfWashType()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
