--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -63,7 +63,7 @@
                     </div>
                 </a>
             </ion-list>
-            <button class="button button-block button-positive " ng-click="addAuto()">确认</button>
+            <button class="button-block button-positive " ng-click="addAuto()">确认</button>
         </form>
     </ion-content>
 </ion-view>
