--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -21,6 +21,8 @@
 
     <!--[pingpp_pay-->
     <script src="lib/pingpp_pay.js"></script>
+    
+    <script src="lib/angular-recursion.js"></script>
 
 
     <script src="app.js"></script>
@@ -56,6 +58,7 @@
     <script src="app/common/regionSvr.js"></script>
     <script src="app/util/cameraSvr.js"></script>
     <script src="app/util/fileTransferSvr.js"></script>
+    <script src="app/util/takePhotoCtrl.js"></script>
 
 </head>
 <body ng-csp ng-app="udqApp">
