--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -27,7 +27,10 @@
                 <ion-option-button class="button-stable" ng-show='order.state==5' ng-click="shareOrder(order)">分享</ion-option-button>
             </ion-item>
         </ion-list>
-        <ion-infinite-scroll icon="ion-loading-c" on-infinite ="updateOrders()"></ion-infinite-scroll>
+        <div>
+            <ion-infinite-scroll icon="ion-loading-c" on-infinite="updateOrders()" immediate-check="false" ng-if="noMoreOrderAvailable"></ion-infinite-scroll>
+        </div>
+        
 
 
     </ion-content>
