--- a/udqAutoApp/www/app/employee/order/newOrder.html
+++ b/udqAutoApp/www/app/employee/order/newOrder.html
@@ -6,10 +6,10 @@
                 <p>车牌: {{order.autoPN}}</p>
                 <p>时间：{{order.orderTime}}，金额：{{order.finalAmount}}</p>
 
-                <ion-option-button class="button-positive" ng-click="acceptOrder(order)">
+                <ion-option-button class="button-udq-accept" ng-click="acceptOrder(order)">
                     接收订单
                 </ion-option-button>
-                <ion-option-button class="button-assertive" ng-click="cancelOrder(order)">
+                <ion-option-button class="button-udq-cancel" ng-click="cancelOrder(order)">
                     取消订单
                 </ion-option-button>
             </ion-item>
