--- a/udqAutoApp/www/app/customer/auto/citySelect.html
+++ b/udqAutoApp/www/app/customer/auto/citySelect.html
@@ -10,7 +10,7 @@
         <ion-refresher on-refresh="doRefreshOfCity()"></ion-refresher>
 
         <ion-list ng-repeat="city in cities">
-            <ion-radio ng-model="selected.selectedCityId"  ng-change="cityToRegion(selected.selectedCityId)" value={{city.id}}>{{city.name}}</ion-radio>
+            <ion-radio ng-model="autoInfo.selectedCityId" value={{city.id}}>{{city.name}}</ion-radio>
         </ion-list>
 
     </ion-content>
